[gd_scene load_steps=3 format=3 uid="uid://diyb3ydp40swp"]

[ext_resource type="Script" path="res://Root.gd" id="1_w2udm"]
[ext_resource type="PackedScene" uid="uid://cyflvex77ugkm" path="res://assets/main.tscn" id="2_j4nj0"]

[node name="Root" type="Node"]
script = ExtResource("1_w2udm")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="MainMenu"]

[node name="MainMenu" type="PanelContainer" parent="MainMenu/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="HostButton" type="Button" parent="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AdressEntry" type="LineEdit" parent="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Adress"

[node name="Map" type="Node3D" parent="."]

[node name="Main Scene" parent="Map" instance=ExtResource("2_j4nj0")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
process_mode = 3
_spawnable_scenes = PackedStringArray("res://assets/player/Player.tscn")
spawn_path = NodePath("..")
spawn_limit = 1

[node name="DebugOnline" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="IDPlayer" type="Label" parent="DebugOnline"]
layout_mode = 2

[connection signal="pressed" from="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
